[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-output-validator"
version = "0.1.0"
description = "Validate LLM response text against declarative rules — length, contains, regex."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "agents", "validation", "output", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
# Enables rules.json_schema().
schema = ["jsonschema>=4.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-output-validator"
Repository = "https://github.com/MukundaKatta/llm-output-validator"
Issues = "https://github.com/MukundaKatta/llm-output-validator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_output_validator = ["py.typed"]
